--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
           <a href="https://travelandcapture.com/" target="_blank"><button class="visit-buttons">Visit</button></a>
         </div>
         <div class="project">
+          <h3><a href="https://travelandcapture.com/" target="_blank">Travel & Capture</a></h3>
+          <p>Developed a responsive travel blog featuring optimized image galleries, seamless navigation, and a mobile-first user experience.</p><br/>
+          <a href="https://travelandcapture.com/" target="_blank"><button class="visit-buttons">Visit</button></a>
+        </div>
+        <div class="project">
           <h3><a href="https://stratheartedge.com/" target="_blank">Strat Heart Edge</a></h3>
           <p>Created a corporate website with a clean design system, structured content hierarchy, and smooth navigation for professional branding.</p><br/>
           <a href="https://stratheartedge.com/" target="_blank"><button class="visit-buttons">Visit</button></a>
@@ -110,3 +115,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
