--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   <section id="contact" class="contact">
     <div class="container">
       <h2>Let's Connect</h2>
-      <p>Email: <a href="mailto:kavyasrirebba02@gmail.com">kavyasrirebba02@gmail.com</a></p>
+      <p>Email: <a href="mailto:kavyasrirebba02@gmail.com">kavyasreerebba22@gmail.com</a></p>
       <p>LinkedIn: <a href="https://www.linkedin.com/in/kavya-sri-rebba/">linkedin.com/in/kavyasri</a></p>
     </div>
   </section>
@@ -115,4 +115,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
