--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
           <a href="https://travelandcapture.com/" target="_blank"><button class="visit-buttons">Visit</button></a>
         </div>
         <div class="project">
-          <h3><a href="https://travelandcapture.com/" target="_blank">Travel & Capture</a></h3>
-          <p>Developed a responsive travel blog featuring optimized image galleries, seamless navigation, and a mobile-first user experience.</p><br/>
+          <h3><a href="https://travelandcapture.com/" target="_blank">Prashanti Unlimited</a></h3>
+          <p>A transformational coaching website focused on helping individuals, families, and professionals break through emotional, relational, and mental barriers. Designed with clarity and empathy, the site offers coaching verticals for parenting, relationships, purpose discovery, and mindset mastery. It features inspiring success stories, a clean visual layout with compelling imagery, and clear call-to-action elements like “Book a Free Call” to guide visitors toward seeking support.</p><br/>
           <a href="https://travelandcapture.com/" target="_blank"><button class="visit-buttons">Visit</button></a>
         </div>
         <div class="project">
@@ -115,5 +115,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
