--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
         <div class="project">
           <h3><a href="https://travelandcapture.com/" target="_blank">Prashanti Unlimited</a></h3>
-          <p>A transformational coaching website focused on helping individuals, families, and professionals break through emotional, relational, and mental barriers. Designed with clarity and empathy, the site offers coaching verticals for parenting, relationships, purpose discovery, and mindset mastery. It features inspiring success stories, a clean visual layout with compelling imagery, and clear call-to-action elements like “Book a Free Call” to guide visitors toward seeking support.</p><br/>
+          <p>Developed a clean, engaging website for a coaching platform, focusing on smooth navigation, impactful visuals, and clear call-to-action elements to enhance user engagement.</p><br/>
           <a href="https://travelandcapture.com/" target="_blank"><button class="visit-buttons">Visit</button></a>
         </div>
         <div class="project">
@@ -115,6 +115,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
