--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="project">
           <h3><a href="https://travelandcapture.com/" target="_blank">Prashanti Unlimited</a></h3>
           <p>Developed a clean, engaging website for a coaching platform, focusing on smooth navigation, impactful visuals, and clear call-to-action elements to enhance user engagement.</p><br/>
-          <a href="https://travelandcapture.com/" target="_blank"><button class="visit-buttons">Visit</button></a>
+          <a href="https://prashantiunlimited.com/" target="_blank"><button class="visit-buttons">Visit</button></a>
         </div>
         <div class="project">
           <h3><a href="https://stratheartedge.com/" target="_blank">Strat Heart Edge</a></h3>
@@ -115,6 +115,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
