--- a/index.html
+++ b/index.html
@@ -295,7 +295,6 @@
                         <div class="flex flex-col md:flex-row md:items-center md:justify-between mb-6">
                             <div>
                                 <h3 class="text-2xl font-semibold text-blue-400 mb-2">Freelance Web Developer</h3>
-                                <p class="text-gray-300">Self-Employed</p>
                             </div>
                             <div class="text-gray-400 mt-2 md:mt-0">
                                 <i class="fas fa-calendar-alt mr-2"></i>
@@ -316,7 +315,7 @@
                                         <i class="fas fa-camera text-3xl text-blue-400 mr-4"></i>
                                         <div>
                                             <h5 class="text-lg font-semibold text-blue-300">Travel & Capture</h5>
-                                            <p class="text-sm text-gray-400">Photography Portfolio</p>
+                                            <p class="text-sm text-gray-400">Travel and Photography Website</p>
                                         </div>
                                     </div>
                                     <p class="text-gray-300 text-sm">Developed a responsive travel blog featuring optimized image galleries, seamless navigation, and a mobile-first user experience.</p><br/>
@@ -361,7 +360,7 @@
                                         <i class="fas fa-heart text-3xl text-red-400 mr-4"></i>
                                         <div>
                                             <h5 class="text-lg font-semibold text-red-300">Stratheart Edge</h5>
-                                            <p class="text-sm text-gray-400">Healthcare Platform</p>
+                                            <p class="text-sm text-gray-400">Consulting Website</p>
                                         </div>
                                     </div>
                                     <p class="text-gray-300 text-sm">Created a corporate website with a clean design system, structured content hierarchy, and smooth navigation for professional branding.</p><br/>
@@ -552,4 +551,5 @@
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'980fedda20af3dfe',t:'MTc1ODE4ODkyMi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
 
